# technical-services

./: .env.local  .gitignore  README.md  created_pol_numbers.txt  pyproject.toml
JLG/Delivery-NO_23984928/: 23822568.json  23913421.json  23913421.json.response  23915829.json  23984928.mrc  24087296.json  created_pol_numbers.txt  out.csv
JLG/Delivery-NO_23997953/: 2025071101.json  23623126.json  23718321.json  23838834.json  23839160.json  23914474.json  23997953.mrc  24017111.json  created_pol_numbers.txt
JLG/Delivery-NO_24007477/: 2025080502.json  23451489.json  23551954.json  23577658.json  23832345.json  23836635.json  23913277.json  24007477.mrc  created_pol_numbers.txt
Weeding/20250624/: BIBLIOGRAPHIC_20086824200001401_20086824180001401_1.mrc  Weeded-MMSIDs.csv  Weeded-barcodes.txt  data_file.csv  oclcNumbers.txt  titles-20250624.xlsx
Weeding/20250729/: BIBLIOGRAPHIC_20564068660001401_20564068640001401_1.mrc  Weeded-barcodes.csv  data_file.csv  oclcNumbers.txt  titles-20250729.xlsx  titles-20250729_suppressed_only_mmsids.csv
Weeding/20250731/: barcodes-mmsids.csv
Weeding/Scelc-SharedPrintWithdrawals/: barcodes-20240528.txt  barcodes-20240611.txt  withdrawals-20240528.xlsx  withdrawals-20240611.xlsx
Weeding/inventory/: scanned-barcodes.txt  shelf-list.txt  shelf-test.csv
Weeding/old/: CommitedToRetain_003-006.xlsx  FacultyPublications3.xlsx  FacultyPublicationsDupes.xlsx  FacultyPublicationsDupes2.xlsx  SpecialCollections-AlumFacultyPubs.xlsx  Weeding-300-319.xlsx
Weeding/test/: mmsids_all_items_suppressed.txt
Withdrawals/20240516/: BIBLIOGRAPHIC_18799448560001401_1.mrc  data_file.csv  oclcErrors.txt  oclcNumbers.txt
Withdrawals/20240617/: BIBLIOGRAPHIC_18889716780001401_1.mrc  data_file.csv  oclcErrors.txt  oclcNumbers.txt  withdrawn-20240617.xlsx
Withdrawals/20241029/: BIBLIOGRAPHIC_19342001100001401_19342001070001401_1.mrc  data_file.csv  oclcNumbers.txt  withdrawn-20241029.xlsx
docs/: Alma-Material-Types.json  POLineobject.json  PurchaseTypes.json  resource_metadata.json
ebsco/: journal-cancellations2015-2020.xlsx
(+263 files in other folders)
